--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,47 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/timepicker_picked"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="@string/app_welcome"
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/timepicker_list"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/test1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
+        android:layout_height="match_parent"
         android:padding="10dp"
-        android:text="普通时间格式" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/test2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="选择性时间格式" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/test3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="限制性时间格式" />
+        tools:listitem="@layout/item_time_picker" />
 
 </LinearLayout>
