--- a/timepicker/src/main/res/layout/form_chose_time.xml
+++ b/timepicker/src/main/res/layout/form_chose_time.xml
@@ -1,138 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:background="@android:color/white"
-	android:orientation="vertical">
-	
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="10dp">
-		
-		<TextView
-			android:id="@+id/tv_cancel"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerVertical="true"
-			android:padding="10dp"
-			android:text="取消"
-			android:textColor="@android:color/darker_gray"
-			android:textSize="16sp" />
-		
-		<TextView
-			android:id="@+id/tv_title"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"
-			android:text="时间选择"
-			android:textColor="@android:color/black"
-			android:textSize="20sp" />
-		
-		<TextView
-			android:id="@+id/tv_select"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentEnd="true"
-			android:layout_alignParentRight="true"
-			android:layout_centerVertical="true"
-			android:padding="10dp"
-			android:text="确认"
-			android:textSize="16sp" />
-	
-	</RelativeLayout>
-	
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-		
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="5dp"
-			android:orientation="horizontal"
-			android:paddingLeft="20dp"
-			android:paddingTop="15dp"
-			android:paddingRight="20dp"
-			android:paddingBottom="15dp">
-			
-			<vip.qsos.timepicker.DatePickerView
-				android:id="@+id/year_pv"
-				android:layout_width="0dp"
-				android:layout_height="160dp"
-				android:layout_weight="3" />
-			
-			<TextView
-				android:layout_width="0dp"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="年"
-				android:textColor="@android:color/black"
-				android:textSize="18sp" />
-			
-			<vip.qsos.timepicker.DatePickerView
-				android:id="@+id/month_pv"
-				android:layout_width="0dp"
-				android:layout_height="160dp"
-				android:layout_weight="2" />
-			
-			<TextView
-				android:layout_width="0dp"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="月"
-				android:textColor="@android:color/black"
-				android:textSize="18sp" />
-			
-			<vip.qsos.timepicker.DatePickerView
-				android:id="@+id/day_pv"
-				android:layout_width="0dp"
-				android:layout_height="160dp"
-				android:layout_weight="2" />
-			
-			<TextView
-				android:id="@+id/day_tv"
-				android:layout_width="0dp"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="日"
-				android:textColor="@android:color/black"
-				android:textSize="18sp" />
-			
-			<vip.qsos.timepicker.DatePickerView
-				android:id="@+id/hour_pv"
-				android:layout_width="0dp"
-				android:layout_height="160dp"
-				android:layout_weight="2" />
-			
-			<TextView
-				android:id="@+id/hour_text"
-				android:layout_width="0dp"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="小时"
-				android:textColor="@android:color/black"
-				android:textSize="18sp" />
-			
-			<vip.qsos.timepicker.DatePickerView
-				android:id="@+id/minute_pv"
-				android:layout_width="0dp"
-				android:layout_height="160dp"
-				android:layout_weight="2" />
-			
-			<TextView
-				android:id="@+id/minute_text"
-				android:layout_width="0dp"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="分"
-				android:textColor="@android:color/black"
-				android:textSize="18sp" />
-		</LinearLayout>
-	</RelativeLayout>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/tv_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:text="@string/timepicker_cancel"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/tv_select"
+            android:layout_toEndOf="@id/tv_cancel"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:text="@string/timepicker_title"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tv_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:text="@string/timepicker_sure"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp">
+
+        <vip.qsos.timepicker.DatePickerView
+            android:id="@+id/year_pv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4" />
+
+        <TextView
+            android:id="@+id/timepicker_year_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/timepicker_year"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <vip.qsos.timepicker.DatePickerView
+            android:id="@+id/month_pv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+
+        <TextView
+            android:id="@+id/timepicker_month_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/timepicker_month"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <vip.qsos.timepicker.DatePickerView
+            android:id="@+id/day_pv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+
+        <TextView
+            android:id="@+id/timepicker_day_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/timepicker_day"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <vip.qsos.timepicker.DatePickerView
+            android:id="@+id/hour_pv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+
+        <TextView
+            android:id="@+id/timepicker_hour_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/timepicker_hour"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <vip.qsos.timepicker.DatePickerView
+            android:id="@+id/minute_pv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+
+        <TextView
+            android:id="@+id/timepicker_minute_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/timepicker_minute"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+    </LinearLayout>
 </LinearLayout>
