--- a/timepicker/src/main/res/layout/form_item_tag.xml
+++ b/timepicker/src/main/res/layout/form_item_tag.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:gravity="center_vertical"
-        android:textColor="@color/form_tag"
+        android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         tools:text="@string/form_name" />
 
